[workspace]
resolver = "3"
members = ["crates/*", "crates/*/macros"]
exclude = ["tools"]

[workspace.package]
edition = "2024"
version = "0.0.1"
license-file = "LICENSE"
readme = "README.md"
rust-version = "1.88.0"
publish = false
repository = "https://github.com/dealloc/dungeon_rs"
authors = [
  "Wannes Gennar <info@dealloc.be>",
  "Amber Swevers <amber.swevers@hotmail.com>"
]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"

[workspace.lints.clippy]
pedantic = "warn"
suspicious = "warn"
complexity = "warn"
missing_docs_in_private_items = "warn"
module_name_repetitions = "warn"
semicolon_if_nothing_returned = "warn"

[workspace.dependencies]
bevy = { version = "0.16.1", default-features = false, features = ["std", "bevy_log"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
semver = { version = "1.0.26", features = ["serde"] }

# Workspace packages
config = { path = "crates/config" }
data = { path = "crates/data" }
io = { path = "crates/io" }
logging = { path = "crates/logging" }
serialization = { path = "crates/serialization" }
ui = { path = "crates/ui" }
utils = { path = "crates/utils" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Temporary fix to make Bevy run under OSX 26-beta
[profile.dev.package.objc2]
debug-assertions = false

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# We create a separate profile called 'fast' that disables all optimisation in favour of faster compilation for use in CI.
[profile.fast]
inherits = "dev"
opt-level = 0
codegen-units = 256
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
incremental = true

[profile.fast.package."*"]
opt-level = 0

# Remove false positives for cargo machete
[workspace.metadata.cargo-machete]
ignored = ["serde"]
