[package]
name = "assets"
description = "Contains the data structures used throughout other packages."
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
rhai = { version = "1.22.2", features = ["no_time"] }
walkdir = "2.5.0"
utils = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serialization = { workspace = true }
thiserror = { workspace = true }
blake3 = "1.8.2"

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }

[features]
default = [
    "serialization/toml"
]
dev = []
