[package]
name = "editor"
description = "The GUI binary that sets up the windows for the users to interact with."
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
io = { workspace = true }
ui = { workspace = true }
config = { workspace = true }
logging = { workspace = true }
bevy = { workspace = true, default-features = false, features = [
  "std",
  "bevy_window",
  "bevy_winit",
  "bevy_asset"
] }
rfd = { workspace = true }
sysinfo = { version = "0.35.2", default-features = false, features = ["system"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
image = { version = "0.25.6", default-features = false, features = ["png", "ico"] }
winresource = "0.1.22"

[features]
default = ["png"]
dev = [
  "io/dev",
  "ui/dev",
  "config/dev",
  "logging/dev",
  "bevy/dynamic_linking",
  "bevy/bevy_debug_stepping",
  "bevy/bevy_dev_tools",
  "bevy/debug_glam_assert",
  "bevy/trace",
  "bevy/trace_tracy_memory",
  "bevy/detailed_trace"
]

# support for various image formats
png = ["bevy/png"]
webp = ["bevy/webp"]
jpeg = ["bevy/jpeg"]
