[package]
name = "io"
description = "Handles the I/O processing of saving and loading maps"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
data = { workspace = true }
serialization = { workspace = true }
utils = { workspace = true }
bevy = { workspace = true, default-features = false }
serde = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
dev = [
  "data/dev",
  "serialization/dev",
  "utils/dev"
]
